tests/errors/gcd_non_integer.ki
discard import("math").gcd(1.5, 2)
